# ZENTI-SOCIALPROJECT

./: .dockerignore  .gitignore  Dockerfile  agents.md  docker-compose.yml
back/: .dockerignore  Dockerfile  package-lock.json  package.json
my-nuxtor-app/: .dockerignore  .env.example  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
my-nuxtor-app/app/assets/css/: main.css
my-nuxtor-app/app/components/blind/: BlindConversationAssistantChat.vue
my-nuxtor-app/app/components/call/: CallAssistantChat.vue  CallSessionAssistantMenu.vue
my-nuxtor-app/app/components/shared/: BottomNav.vue  HeartBalloon.vue  IosStatusBar.vue
my-nuxtor-app/app/composables/: useCallMatching.ts  useStrapiAuth.ts
my-nuxtor-app/app/middleware/: auth.global.ts
my-nuxtor-app/app/pages/: home.vue  index.vue  profile.vue  stats.vue
my-nuxtor-app/app/pages/achievements/: [id].vue  index.vue
my-nuxtor-app/app/pages/auth/: callback.vue  email.vue
my-nuxtor-app/app/pages/blind/: conversation.vue  help.vue  home.vue  review.vue
my-nuxtor-app/app/pages/call/: end.vue  index.vue  session.vue
my-nuxtor-app/app/pages/onboarding/: blank.vue  blind-entry.vue  blind-name.vue  blind-repeat.vue  blind-yandex.vue  gosuslugi.vue  interests-repeat.vue  interests.vue  invite.vue  name.vue
my-nuxtor-app/scripts/: tauri.dev.ts
my-nuxtor-app/server/api/auth/: yandex.get.ts
my-nuxtor-app/server/utils/: callStore.ts
my-nuxtor-app/src-tauri/: Cargo.toml  tauri.conf.json
my-nuxtor-app/src-tauri/capabilities/: main.json
my-nuxtor-app/src-tauri/src/: lib.rs
(+32 files in other folders)
