[package]
name = "nuxtor"
version = "1.6.0"
description = "Starter template for Nuxt 4 and Tauri 2"
authors = [ "NicolaSpadari" ]
license = "MIT"
repository = "https://github.com/NicolaSpadari/nuxtor"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.5.3"
features = [ ]

[dependencies.tauri]
version = "2.10.1"
features = ["unstable"]
